--- a/ontosuite-miner/concept-mapper/nlp-pipelines/nlp-pipelines-conceptmapper/pom.xml
+++ b/ontosuite-miner/concept-mapper/nlp-pipelines/nlp-pipelines-conceptmapper/pom.xml
@@ -63,6 +63,11 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-autoconfigure</artifactId>
+            <version>1.5.2.RELEASE</version>
+        </dependency>
     </dependencies>
 
     <repositories>
